# libupnp-qt

./: CMakeLists.txt  README.md
.github/workflows/: codeql.yml
UpnpQt/: CMakeLists.txt  abstractdevice.cpp  abstractdevice.h  config.h.in  device.cpp  device.h  discover.cpp  discover.h  global.h  internetgatewaydevice.cpp  internetgatewaydevice.h  reply.cpp  reply.h  service.cpp  service.h  service_p.h  soapenvelope.cpp  soapenvelope.h  wanconnectiondevice.cpp  wanconnectiondevice.h  wanconnectionservice.cpp  wanconnectionservice.h
cmake/: UpnpQtConfig.cmake.in
